<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_map"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/map"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_language"
        android:icon="@drawable/baseline_language_24"
        android:title="@string/language"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/menu_log_out"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/log_out"
        app:showAsAction="always" />
</menu>